Fixing Header Responsive CSS

--- a/index.html
+++ b/index.html
@@ -37,51 +37,53 @@
         <!-------------------------HEADER SECTION START------------------------------------->
         <section id="header-section">
             <nav class="navbar navbar-expand-lg navbar-light">
-                <div class="logo">
-                    <a href="#">E<span>Grocery.</span></a>
-                </div>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav mr-auto">
-                        <div class="navs">
-                            <li class="nav-item active">
-                                <a class="nav-link" href="#">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#about-section-home-link">About</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#services-section-home-link">Services</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#featured-products-section-home-link">Products</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Contact</a>
-                            </li>
-                        </div>
-                        <form class="search-form">
-                            <div class="glass">
-                                <i class="fa-solid fa-magnifying-glass"></i>
+                <div class="container-fluid">
+                    <div class="logo">
+                        <a href="#">E<span>Grocery.</span></a>
+                    </div>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                            <div class="navs">
+                                <li class="nav-item active">
+                                    <a class="nav-link" href="#">Home</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#about-section-home-link">About</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#services-section-home-link">Services</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#featured-products-section-home-link">Products</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="#contact-us-home-link">Contact</a>
+                                </li>
                             </div>
-                            <input class="form-control" type="search" placeholder="Search..." aria-label="Search">
-                        </form>
-                        <div class="socmeds">
-                            <li class="social-media">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-phone"></i></a>
-                            </li>
-                            <li class="social-media">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></i></a>
-                            </li>
-                            <li class="social-media">
-                                <a class="nav-link" href="#"><i class="fa-solid fa-user"></i></i></i></a>
-                            </li>
-                        </div>
-                    </ul>
+                            <form class="search-form">
+                                <div class="glass">
+                                    <i class="fa-solid fa-magnifying-glass"></i>
+                                </div>
+                                <input class="form-control" type="search" placeholder="Search..." aria-label="Search">
+                            </form>
+                            <div class="socmeds">
+                                <li class="social-media">
+                                    <a class="nav-link" href="#"><i class="fa-solid fa-phone"></i></a>
+                                </li>
+                                <li class="social-media">
+                                    <a class="nav-link" href="#"><i class="fa-solid fa-cart-shopping"></i></i></a>
+                                </li>
+                                <li class="social-media">
+                                    <a class="nav-link" href="#"><i class="fa-solid fa-user"></i></i></i></a>
+                                </li>
+                            </div>
+                        </ul>
+                    </div>
                 </div>
             </nav>
         </section>
@@ -2472,6 +2474,7 @@
         <!-------------------------CONTACT US SECTION START------------------------------------->
         <!-------------------------CONTACT US SECTION START------------------------------------->
         <!-------------------------CONTACT US SECTION START------------------------------------->
+        <div id="contact-us-home-link"></div>
         <div id="contact-us-section">
             <div class="contact-section" id="contact">
                 <div class="image-area"></div>
@@ -2610,7 +2613,6 @@
                             </div>
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
                                 <h5 class="text-uppercase">Links</h5>
-
                                 <ul class="list-unstyled mb-0">
                                     <li>
                                     <a href="#!" class="text-white">Link 1</a>
