Adding Links, Fonts, Colors in Footer Section

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         <!-------------------------HEADER SECTION START------------------------------------->
         <!-------------------------HEADER SECTION START------------------------------------->
         <!-------------------------HEADER SECTION START------------------------------------->
+        <div id="home-section"></div>
         <section id="header-section">
             <nav class="navbar navbar-expand-lg navbar-light">
                 <div class="container-fluid">
@@ -50,7 +51,7 @@
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <div class="navs">
                                 <li class="nav-item active">
-                                    <a class="nav-link" href="#">Home</a>
+                                    <a class="nav-link" href="#home-section">Home</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="#about-section-home-link">About</a>
@@ -176,8 +177,21 @@
         <!-------------------------LOGIN AND SIGNUP MODAL SECTION END------------------------------------->
         <!-------------------------LOGIN AND SIGNUP MODAL SECTION END------------------------------------->
         <!-------------------------LOGIN AND SIGNUP MODAL SECTION END------------------------------------->
-        
 
+
+
+
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION START------------------------------------->
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION START------------------------------------->
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION START------------------------------------->
+        <div id="hotline-and-email-modal-section">
+
+        </div>
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION END------------------------------------->
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION END------------------------------------->
+        <!-------------------------HOTLINE AND EMAIL MODAL SECTION END------------------------------------->
+
+        
 
 
         <!-------------------------CAROUSEL SECTION START------------------------------------->
@@ -2671,131 +2685,139 @@
             <footer class="text-center text-white">
                 <div class="container p-4">
                     <section class="mb-4">
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button">
                         <i class="fab fa-facebook-f"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button">
                         <i class="fab fa-twitter"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button"
-                        ><i class="fab fa-google"></i
-                    ></a>
-
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button"
+                        ><i class="fab fa-google"></i>
+                    </a>
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button">
                         <i class="fab fa-instagram"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button">
                         <i class="fab fa-linkedin-in"></i>
                     </a>
-                    <a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+                    <a class="btn btn-outline-light btn-floating m-1" href="#" role="button">
                         <i class="fab fa-github"></i>
                     </a>
                     </section>
                     <section class="">
-                    <form action="">
-                        <div class="row d-flex justify-content-center">
-                            <div class="col-auto">
-                                <p class="pt-2">
-                                <strong>Sign up for our newsletter</strong>
-                                </p>
-                            </div>
-                            <div class="col-md-5 col-12">
-                                <div class="form-outline form-white mb-4">
-                                <input type="email" id="form5Example21" class="form-control" />
-                                <label class="form-label" for="form5Example21">Email address</label>
+                        <form action="">
+                            <div class="row d-flex justify-content-center">
+                                <div class="col-auto">
+                                    <p class="pt-2">
+                                        <strong class="font-styling">Sign up for our newsletter</strong>
+                                    </p>
+                                </div>
+                                <div class="col-md-5 col-12">
+                                    <div class="form-outline form-white mb-4">
+                                    <input type="email" id="form5Example21" class="form-control" />
+                                    <label class=" font-styling form-label" for="form5Example21">Email address</label>
+                                    </div>
+                                </div>
+                                <div class="col-auto">
+                                    <button type="submit" class="font-styling subscribe-button btn btn-outline-light mb-4">
+                                        Subscribe
+                                    </button>
                                 </div>
                             </div>
-                            <div class="col-auto">
-                                <button type="submit" class="btn btn-outline-light mb-4">
-                                Subscribe
-                                </button>
-                            </div>
-                        </div>
-                    </form>
+                        </form>
                     </section>
-                    <section class="mb-4">
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
-                        repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
-                        eum harum corrupti dicta, aliquam sequi voluptate quas.
-                    </p>
+                    <section class="mb-4 font-styling">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt distinctio earum
+                            repellat quaerat voluptatibus placeat nam, commodi optio pariatur est quia magnam
+                            eum harum corrupti dicta, aliquam sequi voluptate quas.
+                        </p>
                     </section>
                     <section class="">
                         <div class="row">
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h5 class="text-uppercase">Links</h5>
-                                <ul class="list-unstyled mb-0">
+                                <h5 class="text-uppercase link-title">Menu</h5>
+                                <ul class="list-unstyled mb-0 text-links">
                                     <li>
-                                    <a href="#!" class="text-white">Link 1</a>
+                                        <a href="#home-section" class="text-white">Home</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 2</a>
+                                        <a href="#about-section-home-link" class="text-white">About</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 3</a>
+                                        <a href="#services-section-home-link" class="text-white">Services</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 4</a>
-                                    </li>
-                                </ul>
-                            </div>
-                            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h5 class="text-uppercase">Links</h5>
-                                <ul class="list-unstyled mb-0">
-                                    <li>
-                                    <a href="#!" class="text-white">Link 1</a>
+                                        <a href="#featured-products-section-home-link" class="text-white">Products</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 2</a>
-                                    </li>
-                                    <li>
-                                    <a href="#!" class="text-white">Link 3</a>
-                                    </li>
-                                    <li>
-                                    <a href="#!" class="text-white">Link 4</a>
+                                        <a href="#contact-us-home-link" class="text-white">Contacts</a>
                                     </li>
                                 </ul>
                             </div>
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                            <h5 class="text-uppercase">Links</h5>
-                            <ul class="list-unstyled mb-0">
-                                <li>
-                                <a href="#!" class="text-white">Link 1</a>
-                                </li>
-                                <li>
-                                <a href="#!" class="text-white">Link 2</a>
-                                </li>
-                                <li>
-                                <a href="#!" class="text-white">Link 3</a>
-                                </li>
-                                <li>
-                                <a href="#!" class="text-white">Link 4</a>
-                                </li>
-                            </ul>
+                                <h5 class="text-uppercase link-title">Top Products</h5>
+                                <ul class="list-unstyled mb-0 fruit-links">
+                                    <li>
+                                        <a href="#!" class="text-white">Apple</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Grapes</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Mangos</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Oranges</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Pineapple</a>
+                                    </li>
+                                </ul>
                             </div>
                             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-                                <h5 class="text-uppercase">Links</h5>
+                                <h5 class="text-uppercase link-title">Quick Links</h5>
+                                <ul class="list-unstyled mb-0 text-quick-links">
+                                    <li>
+                                        <a href="#!" class="text-white">User Account</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Become An Affilate</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">New Offer</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Recent Blogs</a>
+                                    </li>
+                                    <li>
+                                        <a href="#!" class="text-white">Help</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
+                                <h5 class="text-uppercase link-title">Easy Payment</h5>
                                 <ul class="list-unstyled mb-0">
                                     <li>
-                                    <a href="#!" class="text-white">Link 1</a>
+                                        <a href="#!" class="text-white">Link 1</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 2</a>
+                                        <a href="#!" class="text-white">Link 2</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 3</a>
+                                        <a href="#!" class="text-white">Link 3</a>
                                     </li>
                                     <li>
-                                    <a href="#!" class="text-white">Link 4</a>
+                                        <a href="#!" class="text-white">Link 4</a>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                     </section>
                 </div>
-                <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+                <div class="copyright-text text-center p-3 font-styling">
                     © 2020 Copyright:
-                    <a class="text-white" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+                    <a class="text-white font-styling" href="https://mdbootstrap.com/">MDBootstrap.com</a>
                 </div>
             </footer>
         </div>
