Adding Background image in Signin And Signup Modal Section

--- a/index.html
+++ b/index.html
@@ -107,11 +107,7 @@
                 aria-hidden="true">
                 <div class="modal-dialog">
                     <div class="modal-content">
-                        <div class="modal-header">
-                            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                            <button type="button" class="btn-close" data-bs-dismiss="modal" 
-                            aria-label="Close"></button>
-                        </div>
+                        <img class="modal-background" src="img/fruits/strawberry.jpg" alt="background-image">
                         <div class="modal-body signin-modal">
                             <ul class="nav nav-tabs" id="myTab" role="tablist">
                                 <li class="nav-item" role="presentation">
@@ -930,21 +926,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/apple.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/blueberry.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/cherry.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -952,21 +939,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/vegetables/bean-seed.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/broccoli.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/cabbage.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -974,21 +952,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/date.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/grape-black.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/grape.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -996,21 +965,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/vegetables/capsicum.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/carrot.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/cauliflower.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1030,21 +990,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/kiwi.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/lemon.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/local-orange.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1052,21 +1003,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/vegetables/chili-local.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/chili.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/motorshuti.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1074,21 +1016,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/fruits/mango.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/orange-green.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/fruits/orange.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -1096,21 +1029,12 @@
                             <div class="card-wrapper container-sm">
                                 <div class="card">
                                     <img src="img/vegetables/cucumber.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/lemon.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                                 <div class="card">
                                     <img src="img/vegetables/long-bean.jpg" class="card-img-top" alt="collection-images">
-                                    <div class="card-body">
-                                        <h5 class="card-title">Card title</h5>
-                                    </div>
                                 </div>
                             </div>
                         </div>
